manifests/deployments/peerscout/peerscout--stg.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: peerscout-http-basic-auth--stg
  namespace: peerscout
spec:
  basicAuth:
    secret: peerscout-http-basic-traefik-auth--stg
    realm: "Authentication Required"
    removeHeader: true
