manifests/deployments/peerscout/peerscout--prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: peerscout-peerscout-http-basic-auth-prod@kubernetescrd
  name: peerscout--prod-traefik
  namespace: peerscout
spec:
  ingressClassName: traefik
  rules:
  - host: peerscout.elifesciences.org
    http:
      paths:
      - backend:
          service:
            name: peerscout--prod
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - peerscout.elifesciences.org
    secretName: peerscout-prod-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: peerscout-http-basic-auth--prod
  namespace: peerscout
spec:
  basicAuth:
    secret: peerscout-http-basic-traefik-auth--prod
    realm: "Authentication Required"
    removeHeader: true
